# SVG-pltmarker

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yml
examples/: example.py
svg_pltmarker/: __init__.py  path_converter.py
svg_pltmarker/svg_module/: __init__.py  svg_circle.py  svg_ellipse.py  svg_graphic_element_base.py  svg_line.py  svg_object.py  svg_path.py  svg_polygon.py  svg_polyline.py  svg_rect.py
tests/files/: test.xml
tests/svg/: test_svg_circle.py  test_svg_ellipse.py  test_svg_line.py  test_svg_polygon.py  test_svg_polyline.py  test_svg_rect.py
tests/svg_module/: test_svg_circle.py  test_svg_ellipse.py  test_svg_line.py  test_svg_object.py  test_svg_path.py  test_svg_polygon.py  test_svg_polyline.py  test_svg_rect.py
