[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svg_pltmarker"
version = "0.1.0"
authors = [
    {name = "Yuki Imajuku", email = "yuki.imjk@gmail.com"},
]
license = {file = "LICENSE"}
description = "A library for generating Matplotlib markers from SVG files."
urls = {repository = "https://github.com/Yuki-Imajuku/SVG-pltmarker"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "matplotlib>=3.6.0",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
]
keywords = ["SVG", "graphic", "marker", "matplotlib", "path"]

[tool.setuptools.packages.find]
include = [
    "README.md",
    "LICENSE",
    "svg_pltmarker",
]

[project.optional-dependencies]
dev = [
    "black~=23.9.1",
    "flake8~=6.1.0",
    "isort~=5.12.0",
    "mypy~=1.6.0",
    "mypy-extensions~=1.0.0",
]
